Fix spacing and baseline on top right area (#5985)
This PR improves the placement of the top right Sign in / Share buttons.

I'd show screenshots but there's almost no point, as the changes are a
few pixels.

### Change type

- [ ] `bugfix`
- [x] `improvement`
- [ ] `feature`
- [ ] `api`
- [ ] `other`

### Release notes

- Tiny adjustment of top right buttons

--- a/apps/dotcom/client/src/tla/components/TlaCtaButton/cta-button.module.css
+++ b/apps/dotcom/client/src/tla/components/TlaCtaButton/cta-button.module.css
@@ -6,7 +6,6 @@
 	pointer-events: all;
 	gap: 8px;
 	height: 36px;
-	margin-top: 1px;
 	margin-left: 2px;
 	margin-right: 0px;
 	display: flex;
